--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="google-site-verification" content="NdVoNr0y5NcYj6vT68Nppv26S4iuDlLdwJzv0I2Ru9w" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap"
    rel="stylesheet">
-  <link href="styles/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles/main.css">
+  <link href="all.css" rel="stylesheet">
+  <link rel="stylesheet" href="main.css">
   <title>Ashok KC</title>
 </head>
 <body>
@@ -32,6 +32,6 @@
     </div>
   </div>
 
-  <script src="scripts/main.js"></script>  
+  <script src="main.js"></script>  
 </body>
 </html>
